# qwqfetch

./: .gitignore  README.md  main.py  qwqfetch  runner.py  setup.cfg
qwqfetch/: __init__.py  colors.py  default_result_list.py  main.py
qwqfetch/sysinfo/: username.py
qwqfetch/sysinfo/board_name/: __init__.py  linux.py  windows.py
qwqfetch/sysinfo/desktop_environment/: __init__.py  plasma.py
qwqfetch/sysinfo/gpu_info/: windows.py
qwqfetch/sysinfo/memory/: __init__.py  linux.py  windows.py
qwqfetch/sysinfo/os_info/: __init__.py  macos.py  windows.py
qwqfetch/sysinfo/package_count/: __init__.py  pm_list.py
qwqfetch/sysinfo/shell/: __init__.py  posix.py
qwqfetch/sysinfo/system_theme/: gtk2.py  gtk3.py  qt.py
qwqfetch/tools/: __init__.py  colors.py  command.py  distro_colors.py  get_wmic_value.py  parse_proc.py
qwqfetch/tools/get_parents/: __init__.py  linux.py  macos.py
src/: __init__.py  basic_system_info.py  colors.py  environ_init.py  global_vars.py  globals.py
src/framework/: __init__.py  theglobals.py  thesolution.py
src/sysinfo/: __init__.py  hostname.py  kernel.py  memory.py  terminal.py  username.py
src/sysinfo/board_name/: __init__.py  linux.py  macos.py  windows.py
src/sysinfo/boardname/: linux.py
src/sysinfo/cpu_info/: __init__.py  linux.py  macos.py  unwanted_list.py  windows.py
src/sysinfo/cpuinfo/: linux.py  unwanted_list.py
src/sysinfo/desktop_environment/: __init__.py  plasma.py
src/themes/: __init__.py
src/tools/: __init__.py  command.py  get_parents.py  get_wmic_value.py  parse_info.py  parse_proc.py
(+54 files in other folders)
