[metadata]
name = qwqfetch
author = Aleksanee
url = https://github.com/Aleksanee/qwqfetch
description = "pure-python independent system info fetch module"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hyfetch, neofetch
require_python = ">=3.7"
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:

[options.extras_require]
ascii = HyFetch

[options.entry_points]
console_scripts =
    qwqfetch = qwqfetch:main

